@@ -11,3 +11,8 @@ If errors occur with JavaFX try this:
   - Go to *File* > *Project Structure* > *Modules* > *Dependencies* and make sure that all javafx .jar files are listed. If it isn't listed press plus and add the .jar files, which are inside javafx-sdk-23.0.1/lib
 - Make sure you have the right run/debug configurations
   - Go to *Run* > *Edit* Configuration and check if *--module-path ".\javafx-sdk-23.0.1\lib" --add-modules javafx.controls,javafx.fxml* is listed in the VM options, otherwise add it.
+
+If errors occur with JavaFX and you use macOS try this:
+- extract Jar files in File --> Project Structure --> Modules
+- tutorial: https://www.youtube.com/watch?v=b60Fl2WLaQY
+- set path: *--module-path "/Library/Java/JavaVirtualMachines/javafx-sdk-23.0.1/lib" --add-modules javafx.controls,javafx.fxml*
